# yral-auth-v2

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  jwt-gen.sh  package.json  pnpm-lock.yaml
.github/workflows/: build-check.yml  deploy-main.yml
src/: app.rs  consts.rs  error.rs  jwt_secret_gen.rs  lib.rs  main.rs  oauth_provider.rs
src/api/: mod.rs  server_impl.rs
src/components/: apple_symbol.rs  google_symbol.rs  mod.rs  spinner.rs  yral_symbol.rs
src/context/: mod.rs  server.rs
src/oauth/: client.rs  client_validation.rs  jwt_gen.rs  mod.rs
src/oauth/jwt/: generate.rs  mod.rs
src/page/: auth.rs  mod.rs
src/page/oauth_login/: mod.rs  oauth_callback.rs  oauth_redirector.rs  server_impl.rs
src/utils/: identity.rs  mod.rs  time.rs
